--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <script type="module" src="./javascripts/main.js"></script>
 
 
-<img src="AVATARTheWayofWaterCreatures.jpg" alt="AVATAR The Way of Water" usemap="AVATAR The Way of Water ">
+<img src="./AVATARTheWayOfWaterSpiritTree.jpg" alt="AVATAR The Way of Water" usemap="AVATAR The Way of Water ">
 
 <map name="AVATAR The Way of Water">
-  <area shape="rect" coords="34,44,270,350" alt="AVATAR The Way of Water Kiri" href="avatarthewayofwaterkiri.htm">
+  <area shape="rect" coords="34,44,270,350" alt="JakeSullyandKiri" href="Kiri.htm">
   <area shape="rect"  coords="34,44,270,350" alt="JakeSullyandKiri"  href="JakeSully.htm">
   <area shape="rect" coords="34,44,270,350" alt="Water" href="Water.htm"
 </map>
